<resources>
    <string name="app_name">CubsAppJava</string>
    <string name="tv_sign_up_text">Sign Up</string>
    <string name="tv_login_text">Login</string>
    <string name="tv_password_text">Password</string>
    <string name="btn_text_sign_in">Sign In</string>
    <string name="btn_text_sign_up">Sign Up</string>
    <string name="btn_text_sign_out">Sign Out</string>
    <string name="tv_text_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_text_settings">Settings</string>
    <string name="tv_text_go_out">Go out</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="progressdialog_loading">loading</string>
</resources>